<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_1sdp"
            android:text="@string/security"
            android:textAllCaps="true"
            android:textColor="@color/color_text_default_dark"
            android:textSize="@dimen/font_20"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="Please Authenticate device to save data."
            android:textColor="@color/color_text_default"
            android:textSize="@dimen/font_18"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:hint="@string/enter_password"
            android:padding="0dp"
            android:textColorHint="@color/color_text_hint">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:text=""
                android:textColor="@color/color_text_default"
                android:textSize="@dimen/font_18" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="right|end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:background="?selectableItemBackground"
                android:padding="@dimen/_5sdp"
                android:text="@string/cancel"
                android:textColor="@color/color_text_hint"
                android:textSize="@dimen/font_16" />

            <Button
                android:id="@+id/btnEnter"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:background="?selectableItemBackground"
                android:padding="@dimen/_5sdp"
                android:text="@string/ok"
                android:textColor="@color/color_text_default_dark"
                android:textSize="@dimen/font_16" />

        </LinearLayout>

    </LinearLayout>
</layout>